...
        android:text="Current Orientration Loading..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationButton" />

    <Button
        android:id="@+id/ZoomInButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="132dp"
        android:onClick="onZoomInButtonClicked"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/curr_location" />

    <Button
        android:id="@+id/ZoomOutButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="92dp"
        android:onClick="onZoomOutButtonClicked"
...
